name:                haskore-braille
version:             0.1.0.0
synopsis:            Braille music code interface for Haskore
description:

  Convert Braille music code to Haskore melodies.

license:             GPL-3
license-file:        LICENSE
author:              Mario Lang
maintainer:          mlang@delysid.org
category:            Music
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:       base >=4.7
                     , containers >= 0.5.5.1
                     , haskore >= 0.2.0.7
                     , midi >= 0.2.1.5
                     , monad-loops
                     , mtl
                     , non-negative >= 0.1.1
                     , parsec >=3.1.9
                     , transformers
                     , transformers-compat >= 0.4.0.3
  exposed-modules:     Haskore.Interface.Braille
  ghc-options:         -Wall
  default-language:    Haskell2010

Executable playbraille
  main-is:     PlayBraille.hs
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5
               , containers >= 0.5.5.1
               , haskore
               , haskore-synthesizer
               , midi
               , monad-loops
               , mtl
               , non-negative
               , numeric-prelude
               , parsec
               , synthesizer-core
               , transformers
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/mlang/haskore-braille.git

